@@ -10,6 +10,11 @@ Change history for FreeTTS.
 --------------------------
 
 May 10, 2004 Release 1.2
+    - Added experimental CMUArcticVoice that may (or may not) work
+      with the CMU ARCTIC databases.
+    - Added CMUTimeVoice, which has noop post lexical processing.
+      Modified FestVoxToFreeTTS to use this voice in the template.
+    - Restructured cluster unit voice for simple extensions.
     - Added com.sun.speech.freetts.lexicon.userAddenda property
     - Added FreeTTS pronunciation to addenda
     - Fix problem where the space character in the path would cause
